force-app/src/objects/ffr__SummarizationLog__c.object
<CustomObject>
    <customHelpPage>ffr__helpsummarizationlog</customHelpPage>
    <fields>
        <fullName>ffr__LogType__c</fullName>
        <label>LogType</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Error</fullName>
                </value>
                <value>
                    <fullName>Information</fullName>
                </value>
                <value>
                    <fullName>Abort</fullName>
                </value>
                <value>
                    <fullName>External</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ffr__Message__c</fullName>
        <label>Message</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ffr__SummarizationTemplate__c</fullName>
        <label>SummarizationTemplate__c</label>
        <referenceTo>ffr__SummarizationTemplate__c</referenceTo>
        <relationshipLabel>Summarization Template Logs</relationshipLabel>
        <relationshipName>SummarizationTemplateLogs</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Summarization Log</label>
    <nameField>
        <label>SummarizationLog Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Summarization Logs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>